--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   email_validator: ^3.0.0
+  device_info_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
