Initial project commit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
     sdk: flutter
   email_validator: ^3.0.0
   device_info_plus: ^10.1.2
+  flutter_dotenv: ^5.1.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
