--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.2.2
   shared_preferences: ^2.2.2
+  cached_network_image: ^3.2.3
   image_picker: ^1.1.1
   image_cropper: ^5.0.1
   package_info_plus: ^8.0.2
