Remove planet images and add instructions

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ APPWRITE_DATABASE_ID=StarChat_DB
 USER_PROFILES_COLLECTION_ID=user_profiles
 PROFILE_PICTURES_BUCKET_ID=profile_pics
 WATCHLIST_ITEMS_COLLECTION_ID=watchlist_items
+PLANETARY_HOUSES_COLLECTION_ID=planetary_houses
+PLANET_HOUSE_INTERPRETATIONS_COLLECTION_ID=planet_house_interpretations
