Add username history tracking

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 APPWRITE_PROJECT_ID=65f5a3e4bd0514b418a4
 APPWRITE_DATABASE_ID=StarChat_DB
 USER_PROFILES_COLLECTION_ID=user_profiles
+USER_NAMES_HISTORY_COLLECTION_ID=user_names_history
 PROFILE_PICTURES_BUCKET_ID=profile_pics
 WATCHLIST_ITEMS_COLLECTION_ID=watchlist_items
 PLANETARY_HOUSES_COLLECTION_ID=planetary_houses
