--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^1.1.1
   image_cropper: ^5.0.1
   package_info_plus: ^8.0.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
