--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   image_picker: ^1.1.1
   image_cropper: ^5.0.1
   package_info_plus: ^8.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_app_badge: ^1.3.0
 
 dev_dependencies:
   flutter_test:
