--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   appwrite: ^13.0.0
   get: ^4.6.6
   logger: ^2.4.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   connectivity_plus: ^6.0.5
   flutter_localizations:
     sdk: flutter
