--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   email_validator: ^3.0.0
   device_info_plus: ^10.1.2
   flutter_dotenv: ^5.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^1.2.2
   shared_preferences: ^2.2.2
   cached_network_image: ^3.2.3
@@ -33,6 +35,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   dart_code_metrics: ^4.19.2
+  hive_generator: ^2.0.0
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
