--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,20 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_app_badge: ^1.3.0
+  flutter_image_compress: ^2.0.4
+  share_plus: ^7.0.0
+  url_validator: ^1.0.0
+  html_unescape: ^2.0.0
+  flutter_local_notifications: ^15.0.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   dart_code_metrics: ^4.19.2
+  hive_generator: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
