--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_app_badge: ^1.3.0
   flutter_image_compress: ^2.0.4
   share_plus: ^7.0.0
-  url_validator: ^1.0.0
+  validators: ^3.0.0
   html_unescape: ^2.0.0
   flutter_local_notifications: ^15.0.0
   path_provider: ^2.1.2
