--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   dart_code_metrics: ^4.19.2
   hive_generator: ^2.0.0
   build_runner: ^2.4.6
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
